tests/snapshots/raw__examples_in_informal_reference-10.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"fn\")"
---
Ok(
    [
        Token {
            class: identifier,
            length: 2,
        },
    ],
)
