tests/snapshots/raw__examples_in_informal_reference-100.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"0xff_u8\")"
---
Ok(
    [
        Token {
            class: hexadecimal_integer,
            length: 5,
        },
        Token {
            class: identifier,
            length: 2,
        },
    ],
)
