tests/snapshots/raw__examples_in_informal_reference-101.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"0o70\")"
---
Ok(
    [
        Token {
            class: octal_integer,
            length: 4,
        },
    ],
)
