tests/snapshots/raw__examples_in_informal_reference-102.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"0o70_i16\")"
---
Ok(
    [
        Token {
            class: octal_integer,
            length: 5,
        },
        Token {
            class: identifier,
            length: 3,
        },
    ],
)
