tests/snapshots/raw__examples_in_informal_reference-105.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"0b________1\")"
---
Ok(
    [
        Token {
            class: binary_integer,
            length: 11,
        },
    ],
)
