tests/snapshots/raw__examples_in_informal_reference-106.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"0usize\")"
---
Ok(
    [
        Token {
            class: decimal_integer,
            length: 1,
        },
        Token {
            class: identifier,
            length: 5,
        },
    ],
)
