tests/snapshots/raw__examples_in_informal_reference-109.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"0b0102\")"
---
Ok(
    [
        Token {
            class: binary_integer,
            length: 6,
        },
    ],
)
